# cynlr_camera

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  azure-pipelines.yml  conanfile.py
include/: AravisBackend.hpp  AravisStream.hpp  Camera.hpp  CameraBackend.hpp  Constants.hpp  Error.hpp  Frame.hpp  Stream.hpp
src/: AravisBackend.cpp  AravisStream.cpp  Camera.cpp
tests/: CMakeLists.txt
tests/standalone/aravisTest/: aravisTest.cpp
tests/standalone/cynlrCamTest/: cynlrCamTest.cpp
tests/standalone/fileAccessTest/: fileAccessTest.cpp
tests/standalone/lensFocusTest/: lensFocusTest.cpp
